# jp2rt

./: .changelog.tpl  .gitchangelog.rc  .gitignore  CHANGELOG.md  README.md  pyproject.toml  settings.gradle
.github/workflows/: build-release-publish.yml
docs/: _config.yml  _toc.yml  install.md  intro.md
docs/example/: descriptors.md  estimate.md  example-data.md  msp2tsv.py  predict.md
docs/reference/: appendix.md  command-line.md  python-api.md
java/: build.gradle
java/src/: licenseHeaderFile.txt  overview.html
java/src/main/java/it/unimi/di/jp2rt/: MolecularDescriptorsCalculator.java  MolecularDescriptorsWrapper.java  TSVRow.java  WrappedMolecularDescriptor.java  package-info.java
python/jp2rt/: __init__.py  java.py  ml.py  scripts.py
