[build-system]
requires = ["hatchling", "hatch-build-scripts", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "jp2rt"
dynamic = ["version"]
description = "A Java and Python package for Predicting Retention Times"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Massimo Santini", email = "santini@di.unimi.it" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "click==8.1.7",
  "joblib==1.3.2",
  "numpy==1.26.4",
  "packaging==24.0",
  "scikit-learn==1.4.1.post1",
  "scyjava==1.9.1",
  "tabulate==0.9.0",
]

[project.scripts]
jp2rt = "jp2rt.scripts:cli"

[project.urls]
Home = "https://mapio.github.io/jp2rt/"
Issues = "https://github.com/mapio/jp2rt/issues"
Source = "https://github.com/mapio/jp2rt"

[tool.hatch.build]
sources = ["python"]
include = ["python/jp2rt/*.py"]

[tool.hatch.build.targets.sdist]
sources = ["."]
include = ["python/**/*.py", "notebooks/*.ipynb", "java/src", "java/build.grade", "java/gradle*"]

[tool.hatch.version]
source = "regex_commit"
path = "python/jp2rt/__init__.py"
commit_message = "Release version {new_version}"

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
ignore = ["EM101", "EM102", "INP001", "N803", "N806", "TRY003"]

[tool.ruff.format]
quote-style = "single"

[project.optional-dependencies]
docs = ["matplotlib==3.8.3",  "seaborn==0.13.2", "jupyter-book==1.0.0"]
plot = ["matplotlib==3.8.3",  "seaborn==0.13.2"]

[tool.hatch.envs.devel]
dependencies = ["gitchangelog==3.0.4 ", "pystache==0.6.5 "]

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
clean = ["jupyter-book clean --all docs"]
build = [
  "./gradlew javadoc",
  "jupyter-book build -nW docs",
  "cp -rv java/build/docs/javadoc docs/_build/html",
  "chmod -R a+rX docs/_build"
]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[[tool.hatch.build.targets.wheel.hooks.build-scripts.scripts]]
out_dir = "python/jp2rt"
commands = [
    "./gradlew clean shadowjar",
    "cp java/build/libs/jp2rt-*-all.jar lib.jar",
]
artifacts = [
    "lib.jar",
]
